# pipelines

./: README.md  pipelines.cabal  stack.yaml
app/: Main.hs
examples/: simple.json
src/: Lib.hs  Local.hs  Pipelines.hs
src/Pipelines/: Command.hs  Common.hs  Coordination.hs  Core.hs  Execution.hs  Filesystem.hs  Local.hs  Types.hs  Watcher.hs
test/: Spec.hs
