name:                pipelines
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/pipelines#readme
license:             AllRightsReserved
author:              Eric Conlon
maintainer:          eric@swift-nav.com
copyright:           (c) 2016 Swift Navigation, All Rights Reserved
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipelines
                     , Pipelines.Common
                     , Pipelines.Coordination
                     , Pipelines.Core
                     , Pipelines.Execution
                     , Pipelines.Filesystem
                     , Pipelines.Local
                     , Pipelines.Types
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , fsnotify
                     , list-transformer
                     --, optparse-applicative
                     , mtl
                     , text
                     , time
                     , transformers
                     , transformers-base
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , OverloadedStrings

executable pipelines-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipelines
  default-language:    Haskell2010

test-suite pipelines-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , exceptions
                     , mtl
                     , pipelines
                     , tasty
                     , tasty-hunit
                     , time
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ejconlon/pipelines
